src/snapshots/aidl_parser__rules__tests__method_with_1_arg.snap
---
source: src/rules.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    symbol_range: "...",
  ),
  args: [
    Arg(
      name: Some("arg"),
      arg_type: Type(
        name: "ArgType",
        kind: Custom,
        symbol_range: "...",
      ),
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  symbol_range: "...",
  full_range: "...",
  value_range: "...",
  oneway_range: "...",
)
