src/snapshots/aidl_parser__rules__tests__method_with_3_args.snap
---
source: src/rules.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    symbol_range: "...",
  ),
  args: [
    Arg(
      name: None,
      arg_type: Type(
        name: "ArgType1",
        kind: Custom,
        symbol_range: "...",
      ),
      symbol_range: "...",
      full_range: "...",
    ),
    Arg(
      name: Some("arg2"),
      arg_type: Type(
        name: "ArgType2",
        kind: Custom,
        symbol_range: "...",
      ),
      symbol_range: "...",
      full_range: "...",
    ),
    Arg(
      name: None,
      arg_type: Type(
        name: "ArgType3",
        kind: Custom,
        symbol_range: "...",
      ),
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  symbol_range: "...",
  full_range: "...",
  value_range: "...",
  oneway_range: "...",
)
