src/snapshots/aidl_parser__rules__tests__method_with_annotation.snap
---
source: src/rules.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "void",
    kind: Void,
    symbol_range: "...",
  ),
  args: [],
  annotations: [
    Annotation(
      name: "@AnnotationName",
    ),
  ],
  value_range: Range(
    start: Position(
      offset: 31,
      line_col: (1, 32),
    ),
    end: Position(
      offset: 31,
      line_col: (1, 32),
    ),
  ),
  symbol_range: "...",
  full_range: "...",
)
