src/snapshots/aidl_parser__rules__tests__method_with_invalid_value.snap
---
source: src/rules.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  args: [],
  annotations: [],
  value: None,
  doc: None,
  symbol_range: "...",
  full_range: "...",
)
