src/snapshots/aidl_parser__rules__tests__method_with_javadoc.snap
---
source: src/rules.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "void",
    kind: Void,
    symbol_range: "...",
  ),
  args: [],
  value: Some(123),
  doc: Some("Method documentation"),
  symbol_range: "...",
  full_range: "...",
)
