src/snapshots/aidl_parser__rules__tests__method_with_transact_code.snap
---
source: src/rules.rs
expression: res
---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: unresolved,
    symbol_range: "...",
    full_range: "...",
  ),
  args: [],
  transact_code: Some(123),
  symbol_range: "...",
  full_range: "...",
  transact_code_range: "...",
  oneway_range: "...",
)
