src/snapshots/aidl_parser__rules__tests__method_with_value.snap
---
source: src/rules.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    symbol_range: "...",
  ),
  args: [],
  value: Some(123),
  symbol_range: "...",
  full_range: "...",
)
