src/snapshots/aidl_parser__rules__tests__method_without_arg.snap
---
source: src/rules.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    symbol_range: "...",
  ),
  args: [],
  symbol_range: "...",
  full_range: "...",
)
