src/snapshots/aidl_parser__rules__tests__oneway_interface.snap
---
source: src/rules.rs
expression: res

---
Interface(
  oneway: true,
  name: "OneWayInterface",
  elements: [],
  full_range: "...",
  symbol_range: "...",
)
