src/snapshots/aidl_parser__rules__tests__package1.snap
---
source: src/rules.rs
expression: res

---
Package(
  name: "x",
  symbol_range: "...",
  full_range: "...",
)
