src/snapshots/aidl_parser__rules__tests__package2.snap
---
source: src/rules.rs
expression: res

---
Package(
  name: "x.y.z",
  symbol_range: "...",
  full_range: "...",
)
