src/snapshots/aidl_parser__rules__tests__parcelable.snap
---
source: src/rules.rs
assertion_line: 254
expression: res

---
Parcelable(
  name: "Tomato",
  members: [
    Member(
      name: "member1",
      type: Type(
        name: "int",
        kind: primitive,
        symbol_range: "...",
      ),
      doc: Some("member1 documentation"),
      symbol_range: "...",
      full_range: "...",
    ),
    Member(
      name: "member2",
      type: Type(
        name: "String",
        kind: string,
        symbol_range: "...",
      ),
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  full_range: "...",
  symbol_range: "...",
)
